new changes added career opp

--- a/page/templates/page/about.html
+++ b/page/templates/page/about.html
@@ -211,8 +211,6 @@ hr .new1 {
   justify-content: center;
   align-items: center;
 }
-
-
   @media(max-width:992px){
     .developers{
       display: flex;
@@ -221,8 +219,24 @@ hr .new1 {
       align-items: center;
     }
   }
+ div.sticky {
+  position: sticky;
+  top: 0;
+    width: 71px;
+    top: 50%;
+    z-index: 9999999;
+    float: right;
+}
 </style>
-
+<div class="sticky">
+    <img src="{% static 'images/logo3.jpg' %}"/>
+</div>
+<div class="container">
+<div class="row">
+            <div class="col-lg-4 col-md-6 col-12">
+<div>
+                <img src="{% static 'images/gitamlogo.png' %}" class="img-fluid" style="margin-top: 16px; width: 60%;"/>
+</div></div></div></div>
 <div class="herotextContainer">
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquam, officia deleniti distinctio dolorem laborum aperiam quisquam nisi repellendus temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid facilis suscipit tempora eos labore minus modi ipsa enim vel ratione.
 </div>
@@ -232,7 +246,7 @@ hr .new1 {
       <div class="col-lg-6">
         <h1 class="font-weight-light">About Us ✨</h1>
         <p class="lead mb-0 asliaboutus">
-          STUDENT INTERNSHIP CLUB is a special interest group of GITAM. We are
+          STUDENT INTERNSHIP CLUB is a special interest group of GITAM. SIC are
           oriented in all field of study. Our group focuses on upcoming training
           opportunities (Research Intern, Dissertation projects, Jobs, etc.) and
           related information with the latest workshops/conferences/webinars
@@ -255,8 +269,7 @@ hr .new1 {
 </div>
 <div class="bg-light">
   <div class="container py-5">
-    <div class="row h-100 align-items-center pt-5 pb-5 asliaboutus lead">
-      
+    <div class="row h-100 align-items-center pt-5 pb-5 asliaboutus lead" style="text-align: justify;">
         <h1 class="font-weight-light">GCGC 🤝</h1>
         <p class="lead mb-2 ">
           GCGC was established in 2020 as a new strategic Center focused on guiding, training and assisting students in finding careers of their choice. Its mission is to “Mentor, guide and prepare every student of GITAM into becoming a well-rounded professional and an empathetic human being, ready to step into her or his chosen career, equipped with competence, confidence and character.”  Since its inception, the GCGC at the university level and Campus Teams have been expanded as envisaged by the vision document. This document lays the roadmap for the future setting goals for each constituent Group.
@@ -407,7 +420,7 @@ hr .new1 {
     {% for member in members %}
       <div class="card" style="min-width: 18rem; margin: 13px; padding: 10px 10px 10px 10px">
           <img src="{{ member.image.url }}" class="card-img-top" alt="...">
-        <div class="card-body">
+        <div class="card-body" style="text-align: center;">
           <h5 class="card-title">{{ member.name }}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{ member.domain }}</h6>
             <p class="card-text">{{ member.description }}</p>
@@ -455,7 +468,7 @@ hr .new1 {
             <div class="col-lg-6 col-12">
                 <h5 class="text-left">Why should I join Summer Internship Club?</h5>
                 <p class="text-left lead" style="font-size: 15px;"> the main moto of SIC is learn - build - grow with
-                    the community. we help student of GITAM to find internship opportunities</p>
+                    the community. SIC help student of GITAM to find internship opportunities</p>
             </div>
             <div class="col-lg-6 col-12">
                 <h5 class="text-left">How frequently do events and Webinars occur?</h5>
