--- a/page/templates/page/specific_scholarship.html
+++ b/page/templates/page/specific_scholarship.html
@@ -149,7 +149,7 @@
           <li>REFERRAL LINK: {{ post.referral_link }}</li>
           <li>LINK TO APPLY: {{ post.link_to_apply }}</li>
           <li>DATE POSTED: {{ post.date_posted }}</li>
-          <li>BRANCH: {{ post.branch }}</li>
+          <li>BRANCH: {{ post.multibranch }}</li>
         </ul>
       </div>
       <a href="{{ post.link_to_apply }}" class="btn btn-primary"
