--- a/page/templates/page/archives.html
+++ b/page/templates/page/archives.html
@@ -291,7 +291,8 @@ ARCHIVES 📚
     </div>
   </div>
 
-
+    <div class="section"><h3>{{ section }}</h3></div>
+    <br>
 <!-- <div class="selectStreamButtons">
 
     {% for archive in allarchives %}
@@ -351,7 +352,7 @@ ARCHIVES 📚
               <label for="to-date">To Date: </label>
               <input type="date" id="to-date" name="to-date" required>
               <button class="button_base" type="submit">Submit</button>
-              <input type="text" name='selection' value="Internship" style="visibility: hidden">
+              <input type="text" name='selection' value="Fellowships" style="visibility: hidden">
           </form>
         </div>
         {% endif %}
@@ -392,7 +393,7 @@ ARCHIVES 📚
               <label for="to-date">To Date: </label>
               <input type="date" id="to-date" name="to-date" required>
               <button class="button_base" type="submit">Submit</button>
-              <input type="text" name='selection' value="Internship" style="visibility: hidden">
+              <input type="text" name='selection' value="Hackathons" style="visibility: hidden">
           </form>
         </div>
         {% endif %}
@@ -433,7 +434,7 @@ ARCHIVES 📚
               <label for="to-date">To Date: </label>
               <input type="date" id="to-date" name="to-date" required>
               <button class="button_base" type="submit">Submit</button>
-              <input type="text" name='selection' value="Internship" style="visibility: hidden">
+              <input type="text" name='selection' value="Scholarships" style="visibility: hidden">
           </form>
         </div>
         {% endif %}
